# worker

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENCE  README.md  REUSE.toml  build.rs  check.ps1  check.sh  docker-build-run.ps1  docker-build-run.sh  docker-compose.yml  heroku.yml  register-bot.ps1  register-bot.sh  reload.ps1  reload.sh  renovate.json  reset-queues.ps1  reset-queues.sh  run.ps1  run.sh  rust-toolchain.toml  template.env
.github/workflows/: docker.yml  main.yml  pr.yml  test.yml
docker-scripts/: bootstrap.sh
migrations/: 20260404102155_initial_schema.sql  20260505192458_add_bibliography.sql  20260513182347_add_article_bibliography_lookup.sql  20260516135439_add_place_data.sql  20260518113248_bibliography_hydration.sql  20260521184716_sync_state_machine.sql  20260525185639_remove_unique_constraint_on_outbox.sql  20260526010803_add_outbox_drain_batch_index_function.sql
src/: article_sync_service.rs  extraction.rs  indexing.rs  jobs.rs  lib.rs  main.rs  matrix_notify_service.rs  meili.rs  migration.rs  outbox.rs  queue.rs  snapshot.rs  state.rs  storage.rs  sync_service.rs  uib_client.rs  web.rs
static/: dev-reload.js  login.html  management.html
tests/: integration.rs
