# SPDX-FileCopyrightText: Copyright (C) 2026 Adaline Simonian
# SPDX-License-Identifier: AGPL-3.0-or-later
#
# This file is part of Ordbok API.
#
# Ordbok API is free software: you can redistribute it and/or modify it under
# the terms of the GNU Affero General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option) any
# later version.
#
# Ordbok API is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
# A PARTICULAR PURPOSE. See the GNU Affero General Public License for more
# details.
#
# You should have received a copy of the GNU Affero General Public License
# along with Ordbok API. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "ordbokapi-worker"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
apalis = { version = "1.0.0-rc.8", features = ["retry", "timeout", "limit", "catch-panic", "tracing"] }
apalis-board = { version = "1.0.0-rc.8", features = ["axum"] }
apalis-redis = "1.0.0-rc.7"
apalis-cron = "1.0.0-rc.7"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
chrono = { version = "0.4.44", features = ["serde"] }
cron = "0.16.0"
futures = "0.3.32"
meilisearch-sdk = "0.33.0"
num_cpus = "1.17.0"
redis = { version = "1.2.1", features = ["aio", "connection-manager", "tokio-comp"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "chrono"] }
tokio = { version = "1.52.3", features = ["fs", "rt-multi-thread", "macros", "signal"] }
tokio-macros = "2.7.0"
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "chrono"] }
dotenvy = { version = "0.15.7", optional = true }
matrix-sdk = { version = "0.16.0", optional = true, default-features = false, features = ["rustls-tls", "markdown"] }
pulldown-cmark = { version = "0.13.3", optional = true }
sentry = { version = "0.48.2", optional = true, default-features = false, features = ["anyhow", "backtrace", "contexts", "panic", "rustls", "reqwest", "tracing"] }

[features]
default = []
use_dotenv = ["dotenvy"]
matrix_notifs = ["matrix-sdk", "pulldown-cmark"]
sentry_integration = ["sentry"]
dotenvy = ["dep:dotenvy"]

[profile.dev]
debug = true

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
